--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     compile project(':library')
+    compile project(':edittexticon')
     testCompile 'junit:junit:4.12'
 }
